clarify table headings

--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
 					<tr>
 						<th>Condition</th>
 						<th>Average Time (s)</th>
-						<th>Number of Errors</th>
+						<th>Average Number of Errors</th>
 					</tr>
 					<tr>
 						<td>3-key</td>
 						<td>113</td>
-						<td>1.4</td>
+						<td>1.2</td>
 					</tr>
 					<tr>
 						<td>5-key</td>
